--- a/roles/nsd/files/unsigned_zones/flatpak.org
+++ b/roles/nsd/files/unsigned_zones/flatpak.org
@@ -1,7 +1,7 @@
 $TTL		300
 
 @		IN	SOA	ns-master.gnome.org. hostmaster.gnome.org. (
-				2020041500      ; Serial
+				2022060900      ; Serial
 				28800		; Refresh
 				7200		; Retry
 				604800		; Expire
@@ -13,18 +13,14 @@ $TTL		300
 		IN	NS	ns-master.gnome.org.
 		IN	NS	ns-slave.gnome.org.
 
-; front-ams.flathub.org
-		IN	A	46.235.231.150
-		IN	AAAA	2a00:1098:88:12::1
-
-; front-hex2.flathub.org
-		IN	A	46.235.230.111
-		IN	AAAA	2a00:1098:82:e:0:0:1:1
+		IN	A	8.43.85.3
+		IN	A	8.43.85.4
+		IN	A	8.43.85.5
 
 		IN	MX	10 smtp.gnome.org.
 
 docs		IN	CNAME	readthedocs.io.
 
-www		IN	CNAME   @
+www		IN	CNAME   router-default.apps.openshift4.gnome.org.
 
 flatpak.org. IN TXT "libera-iE!2PbqoQsUaDXkRDrbAX2_j"
