--- a/inventory/host_vars/signal.gnome.org
+++ b/inventory/host_vars/signal.gnome.org
@@ -1,4 +1,6 @@
 datacenter: 'osuosl'
+firewall_additional_rules:
+  - "iptables -A INPUT -i wg0 -j ACCEPT"
 firewall_allowed_tcp_ports:
   - 22
   - 80 
