--- a/inventory/host_vars/smtp.gnome.org
+++ b/inventory/host_vars/smtp.gnome.org
@@ -11,11 +11,11 @@ dovecot_ldap_bind_userdn: uid=%n,cn=users,cn=accounts,dc=gnome,dc=org
 dovecot_ldap_base: cn=users,cn=accounts,dc=gnome,dc=org
 dovecot_ldap_tls_cacert_path: /etc/ipa/ca.crt
 dovecot_ldap_user_attrs: uidNumber=uid,gidNumber=gid
-dovecot_ldap_user_filter: (&(objectclass=person)(uid=%n)(mail=%n@staff-mail.gnome.org))
+dovecot_ldap_user_filter: (&(objectclass=person)(uid=av)(|(memberOf=cn=staffmail,cn=groups,cn=accounts,dc=gnome,dc=org)(memberOf=cn=foundation,cn=groups,cn=accounts,dc=gnome,dc=org)(memberOf=cn=emeritus,cn=groups,cn=accounts,dc=gnome,dc=org)))
 dovecot_mail_privileged_group: staffmail
 dovecot_ssl: true
-dovecot_ssl_cert_path: /etc/pki/tls/certs/dovecot.pem
-dovecot_ssl_key_path: /etc/pki/tls/private/dovecot.pem
+dovecot_ssl_cert_path: /etc/pki/tls/certs/smtp.gnome.org.crt
+dovecot_ssl_key_path: /etc/pki/tls/private/smtp.gnome.org.key
 dovecot_maildir_user: dovecot
 dovecot_maildir_group: staffmail
 dovecot_homedir: "{{ dovecot_maildir }}/%d/%u"
