--- a/inventory/host_vars/smtp.gnome.org
+++ b/inventory/host_vars/smtp.gnome.org
@@ -75,3 +75,8 @@ postfix_smtpd_milters:
 postfix_dkim_domains:
   - { 'name': 'gnome.org', 'selector': 'default' }
 enable_opendkim: true
+postfix_mynetworks:
+  - 127.0.0.0/8
+  - 172.31.0.0/16
+  - 10.8.0.0/24
+  - 8.43.85.20/32
