--- a/inventory/host_vars/smtp.gnome.org
+++ b/inventory/host_vars/smtp.gnome.org
@@ -6,6 +6,8 @@ firewall_allowed_tcp_ports:
 firewall_additional_rules:
   - "iptables -A INPUT -i eth1 -j ACCEPT"
 
+enable_system_backup: true
+
 dovecot_ldap_host: ldaps://idm02.gnome.org
 dovecot_ldap_bind_userdn: uid=%n,cn=users,cn=accounts,dc=gnome,dc=org
 dovecot_ldap_base: cn=users,cn=accounts,dc=gnome,dc=org
