--- a/inventory/host_vars/smtp.gnome.org
+++ b/inventory/host_vars/smtp.gnome.org
@@ -17,8 +17,8 @@ dovecot_ldap_user_attrs: uidNumber=uid,gidNumber=gid
 dovecot_ldap_user_filter: (&(objectclass=person)(uid=%n)(|(memberOf=cn=staffmail,cn=groups,cn=accounts,dc=gnome,dc=org)(memberOf=cn=foundation,cn=groups,cn=accounts,dc=gnome,dc=org)(memberOf=cn=emeritus,cn=groups,cn=accounts,dc=gnome,dc=org)(memberOf=cn=mailgrace,cn=groups,cn=accounts,dc=gnome,dc=org)))
 dovecot_mail_privileged_group: staffmail
 dovecot_ssl: true
-dovecot_ssl_cert_path: /etc/pki/tls/certs/smtp.gnome.org.crt
-dovecot_ssl_key_path: /etc/pki/tls/private/smtp.gnome.org.key
+dovecot_ssl_cert_path: /etc/letsencrypt/live/smtp.gnome.org/fullchain.pem
+dovecot_ssl_key_path: /etc/letsencrypt/live/smtp.gnome.org/privkey.pem
 dovecot_maildir_user: dovecot
 dovecot_maildir_group: staffmail
 dovecot_homedir: "{{ dovecot_maildir }}/%d/%u"
