--- a/inventory/host_vars/smtp.gnome.org
+++ b/inventory/host_vars/smtp.gnome.org
@@ -110,3 +110,4 @@ postfix_myhostname: smtp.gnome.org
 postfix_smtpd_sender_login_maps:
   - hash:/etc/gnome.org/master-mail/aliases
   - hash:/etc/postfix/virtual-aliases/virtual-gnome.org
+postfix_virtual_transport: 'lmtp:unix:private/dovecot-lmtp'
