--- a/inventory/host_vars/idm04.gnome.org
+++ b/inventory/host_vars/idm04.gnome.org
@@ -1,2 +1,2 @@
 ansible_connection: ssh
-ansible_ssh_common_args: '-o ProxyCommand="ssh -W %h:%p -q bastion02.gnome.org"'
+ansible_ssh_common_args: '-o ProxyCommand="ssh -W %h:%p -q bastion02.gnome.org" -o StrictHostKeyChecking=no'
