--- a/inventory/host_vars/bastion02.gnome.org
+++ b/inventory/host_vars/bastion02.gnome.org
@@ -2,3 +2,6 @@ sshguard_enabled: true
 
 firewall_allowed_tcp_ports:
   - 22
+
+ansible_connection: ssh
+ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
