--- a/inventory/host_vars/bastion02.gnome.org
+++ b/inventory/host_vars/bastion02.gnome.org
@@ -5,6 +5,7 @@ firewall_allowed_tcp_ports:
 
 firewall_additional_rules:
   - "iptables -A INPUT -s 172.31.16.0/20 -p tcp --dport 3100 -j ACCEPT"
+  - "iptables -A INPUT -s 10.8.0.2/32 -p tcp --dport 9100 -j ACCEPT"
 
 loki_s3_bucket_name: !vault |
           $ANSIBLE_VAULT;1.1;AES256
