--- a/inventory/host_vars/smtp.gnome.org
+++ b/inventory/host_vars/smtp.gnome.org
@@ -1,19 +1,16 @@
 firewall_allowed_tcp_ports:
+  - 22
   - 25
   - 993
   - 995
   - 587
 
 firewall_additional_rules:
-  - "iptables -A INPUT -i eth1 -j ACCEPT"
+  - "iptables -A INPUT -i wg0 -j ACCEPT"
 
 sshguard_enabled: true
 
-enable_system_backup: true
-backup_exclude:
-  - /var/lib/mailman
-
-dovecot_ldap_host: ldaps://idm02.gnome.org
+dovecot_ldap_host: ldaps://idm03.gnome.org
 dovecot_ldap_bind_userdn: uid=%n,cn=users,cn=accounts,dc=gnome,dc=org
 dovecot_ldap_base: cn=users,cn=accounts,dc=gnome,dc=org
 dovecot_ldap_tls_cacert_path: /etc/ipa/ca.crt
