--- a/inventory/host_vars/logs.gnome.org
+++ b/inventory/host_vars/logs.gnome.org
@@ -1,3 +1,5 @@
 is_rsyslog_server: true
 firewall_additional_rules:
   - "iptables -A INPUT -i eth0 -j ACCEPT"
+ansible_connection: ssh
+ansible_ssh_common_args: '-o ProxyCommand="ssh -W %h:%p -q root@bastion01.gnome.org -o StrictHostKeyChecking=no"'
